[package]
name = "rnd_anchor_framework"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rnd_anchor_framework"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
